package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-utils:main_dependencies",
        "@org_geotools_gt_cql",
        "@org_geotools_gt_main",
        "@org_geotools_gt_transform",
        "@org_scala_lang_scala_library//:linkable"
    ],
    runtime_deps = [
        "//geomesa-filter/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "//geomesa-features/geomesa-feature-all:main_dependencies",
        "@log4j_log4j//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-filter/src/test/resources:resources",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
