package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-arrow/geomesa-arrow-gt:main_dependencies",
        "//geomesa-features/geomesa-feature-kryo:main_dependencies",
        "//geomesa-filter:main_dependencies",
        "//geomesa-security:main_dependencies",
        "@com_github_ben_manes_caffeine_caffeine",
        "@io_sgr_s2_geometry_library_java",
        "@org_calrissian_mango_mango_core",
        "@org_geotools_gt_process_feature",
        "@org_scala_lang_scala_library//:linkable"
    ],
    runtime_deps = [
        "//geomesa-index-api/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@org_geotools_gt_epsg_hsql",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "@org_specs2_specs2_mock_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-index-api/src/test/resources:resources",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
