package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "@com_typesafe_scala_logging_scala_logging_2_11",
        "@io_sgr_s2_geometry_library_java",
        "@org_locationtech_sfcurve_sfcurve_zorder_2_11",
        "@org_scala_lang_scala_library//:linkable"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@joda_time_joda_time",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-z3/src/test/resources:resources",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
