package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-arrow/geomesa-arrow-gt:main_dependencies",
        "//geomesa-features/geomesa-feature-all:main_dependencies",
        "//geomesa-filter:main_dependencies",
        "//geomesa-index-api:main_dependencies",
        "//geomesa-process/geomesa-process-vector:main_dependencies",
        "//geomesa-utils:main_dependencies",
        "//geomesa-z3:main_dependencies",
        "//geomesa-zk-utils:main_dependencies",
        "@com_github_ben_manes_caffeine_caffeine",
        "@com_google_guava_guava",
        "@commons_io_commons_io",
        "@org_apache_accumulo_accumulo_core",
        "@org_apache_accumulo_accumulo_start",
        "@org_apache_avro_avro//:linkable",
        "@org_apache_curator_curator_recipes",
        "@org_apache_hadoop_hadoop_client",
        "@org_geotools_gt_cql",
        "@org_geotools_gt_main",
        "@org_geotools_gt_metadata",
        "@org_geotools_gt_opengis",
        "@org_geotools_gt_render",
        "@org_locationtech_jts_jts_core",
        "@org_scala_lang_scala_library//:linkable"
    ],
    runtime_deps = [
        "//geomesa-accumulo/geomesa-accumulo-datastore/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@javax_media_jai_core//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_arrow_arrow_vector_tests",
        "@org_geotools_jdbc_gt_jdbc_h2",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "@org_specs2_specs2_mock_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-accumulo/geomesa-accumulo-datastore/src/test/resources:resources",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@javax_media_jai_core//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_accumulo_accumulo_core//:linkable",
        "@org_apache_accumulo_accumulo_start//:linkable",
        "@org_apache_avro_avro//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_apache_hadoop_hadoop_annotations//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_hadoop_hadoop_common//:linkable",
        "@org_apache_hadoop_hadoop_hdfs//:linkable",
        "@org_apache_hadoop_hadoop_mapreduce_client_common//:linkable",
        "@org_apache_hadoop_hadoop_mapreduce_client_core//:linkable",
        "@org_apache_hadoop_hadoop_yarn_api//:linkable",
        "@org_apache_hadoop_hadoop_yarn_common//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
