package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-security:main_dependencies",
        "//geomesa-utils:main_dependencies",
        "@com_google_guava_guava",
        "@org_apache_accumulo_accumulo_core",
        "@org_apache_hadoop_hadoop_common",
        "@org_geotools_gt_main",
        "@org_geotools_gt_metadata",
        "@org_scala_lang_scala_library//:linkable"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "@org_springframework_security_spring_security_core//:linkable",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-accumulo/geomesa-accumulo-security/src/test/resources:resources",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_accumulo_accumulo_core//:linkable",
        "@org_apache_accumulo_accumulo_start//:linkable",
        "@org_apache_avro_avro//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_apache_hadoop_hadoop_annotations//:linkable",
        "@org_apache_hadoop_hadoop_client//:linkable",
        "@org_apache_hadoop_hadoop_common//:linkable",
        "@org_apache_hadoop_hadoop_hdfs//:linkable",
        "@org_apache_hadoop_hadoop_mapreduce_client_common//:linkable",
        "@org_apache_hadoop_hadoop_mapreduce_client_core//:linkable",
        "@org_apache_hadoop_hadoop_yarn_api//:linkable",
        "@org_apache_hadoop_hadoop_yarn_common//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_springframework_security_spring_security_core//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
