package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-arrow/geomesa-arrow-jts:main_dependencies",
        "//geomesa-features/geomesa-feature-kryo:main_dependencies",
        "//geomesa-filter:main_dependencies",
        "//geomesa-utils:main_dependencies",
        "@org_scala_lang_scala_library//:linkable"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@org_apache_arrow_arrow_vector_tests",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-arrow/geomesa-arrow-gt/src/test/resources:resources",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
