package(default_visibility = ["//visibility:public"])

java_library(
    name = "main_dependencies",
    exports = [
        "//geomesa-convert/geomesa-convert-avro:main_dependencies",
        "//geomesa-convert/geomesa-convert-common:main_dependencies",
        "//geomesa-features/geomesa-feature-all:main_dependencies",
        "@com_github_ben_manes_caffeine_caffeine",
        "@com_typesafe_config",
        "@io_confluent_kafka_avro_serializer",
        "@io_confluent_kafka_schema_registry_client",
        "@org_apache_avro_avro",
        "@org_geotools_gt_main",
        "@org_scala_lang_scala_library//:linkable"
    ],
    runtime_deps = [
        "//geomesa-convert/geomesa-convert-avro-schema-registry/src/main/resources:resources"
    ],
)
     


java_library(
    name = "tests_dependencies",
    testonly = 1,
    exports = [
        "@org_mortbay_jetty_jetty",
        "@org_slf4j_slf4j_log4j12//:linkable",
        "@org_specs2_specs2_core_2_11",
        "@org_specs2_specs2_junit_2_11",
        "main_dependencies"
    ],
    runtime_deps = [
        "//geomesa-convert/geomesa-convert-avro-schema-registry/src/test/resources:resources",
        "@com_101tec_zkclient//:linkable",
        "@com_esotericsoftware_kryo_shaded//:linkable",
        "@io_confluent_kafka_avro_serializer//:linkable",
        "@io_confluent_kafka_schema_registry_client//:linkable",
        "@log4j_log4j//:linkable",
        "@org_apache_avro_avro//:linkable",
        "@org_apache_commons_commons_lang3//:linkable",
        "@org_apache_kafka_kafka_clients//:linkable",
        "@org_apache_zookeeper_zookeeper//:linkable",
        "@org_scala_lang_scala_library//:linkable",
        "@org_slf4j_slf4j_api//:linkable",
        "@org_slf4j_slf4j_log4j12//:linkable"
    ],
)
     

filegroup(
    name = "coordinates",
    srcs = ["MANIFEST.MF"],
)
